Acomodando el Readme

--- a/README
+++ b/README
@@ -1,18 +1,17 @@
 #Entrenamiento en git y calcular el area del circulo  :sunglasses:
 
 **Descripcion**
-#####Este proyecto se creo con la finalidad de aprender a administrar proyectos de software
-#####en github, acontinuacion se detallan los pasos que se siguieron para la creacion de este
-####repo.
+##### Este proyecto se creo con la finalidad de aprender a administrar proyectos de software
+     en github, acontinuacion se detallan los pasos que se siguieron para la creacion de este repo.
 
-*	Crear el repo en git.
-* 	Crear el proyecto en netbeans.
-*	En consola ingresar los comandos de git  :smiling_imp:
-	*	git add .
-	*	git commit
-	*	etc.
-#####Se crearon branches se realizaron merges para aprender a manejar esta
-#####poderosa herramienta.  :satisfied:
+* Crear el repo en git.
+* Crear el proyecto en netbeans.
+* En consola ingresar los comandos de git  :smiling_imp:
+	* git add .
+	* git commit
+	* etc.
+##### Se crearon branches se realizaron merges para aprender a manejar esta
+##### poderosa herramienta.  :satisfied:
 
 
 
