--- a/README
+++ b/README
@@ -17,4 +17,10 @@ repo.
 Se crearon branches se realizaron merges para aprender a manejar esta poderosa herramienta.  :satisfied:
 
 
+**This text will be bold**
+
+* Item 1
+* Item 2
+  * Item 2a
+  * Item 2b
 
